--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <select id="category">
                             <option value="family">Family</option>
                             <option value="friend">Friend</option>
+                            <option value="friend">Girl Freind</option>
                             <option value="work">Work</option>
                             <option value="other">Other</option>
                         </select>
